Changelog
=========

1.3.4 - unreleased
------------------

- INTRANETT-254: Fixed logo title to use the site title.

1.3.3 - 2011-09-09
------------------

- INTRANETT-224: Add default content.

- Update to distribute = 0.6.21.

- INTRANETT-248: Translate subject of welcome mail to Norwegian.

1.3.2 - 2011-09-03
------------------

- Changed authentication cookies to have a timeout instead of being browser
  session based.

- Update to latest Chameleon, Zope 2 and ZTK releases.

- Optimize login form to avoid JavaScript, `spinner.gif` and KSS resources.

- Modified login procedure to skip the `login_success` page.

- Enable Chameleon template engine.

- Disable haproxy application sessions.

- Disable debug HTTP headers by default.

- Set gzip compression level to 7.

- Disable SSLv2 in Nginx and disable ephemeral Diffie-Hellman SSL ciphers.

- INTRANETT-250: Use a textual logo if no customer logo can be found.

- Add back BTree enhancements via `experimental.btree`.

- Implement new `init.d` service start/stop approach following
  http://gocept.net/doc/tutorials/userinit.html

- Restore scored search results.

- Update to Plone 4.1 final.

- Switch to using yuicompressor for JS/CSS optimization, saves about 30kb on
  each page load.

1.3.1 - 2011-07-12
------------------

- INTRANETT-196: Correctly disable highlight portlets.

- INTRANETT-246: Add ProjectRoom to portal_factory.

- Removed ZODB cache warming code - it didn't actually help in practice.

1.3.0 - 2011-07-09
------------------

- INTRANETT-237: Add project rooms.

- Update to PloneFormGen bugfix release to fix quick-edit deletion of fields.

- INTRANETT-196: Disabled half-finished highlight portlets.

- INTRANETT-239: Add personal folders.

- INTRANETT-240: Add file size validator and provide help texts stating the
  50mb upload limit, while limiting Nginx to 500mb.

- INTRANETT-223: The content menu is visible by default.
