@@ -411,12 +411,24 @@ a#portal-logo:hover {
     border: 1px solid #ccc;
     vertical-align: middle;
 }
+form#search .field {
+    background: #ddd;
+    border: 1px solid #ccc;
+    margin: 1em auto;
+    float: left;
+}
+form#search:after {
+    content: "";
+    display: block;
+    clear: left;
+}
 .searchSection {
     font-size: $smaller-size;
     text-align: left;
     color: #808080;
 }
-button.searchButton {
+button.searchButton,
+form#search .field input.searchButton {
     border: none;
     background: transparent;
     padding: 0 $smaller-size;
