@@ -4,7 +4,9 @@ Changelog
 1.3.4 - unreleased
 ------------------
 
-- INTRANETT-254: Fixed logo title to use the site title.
+- Fix styling of search box in related items dialog.
+
+- INTRANETT-254: Fix logo title to use the site title.
 
 1.3.3 - 2011-09-09
 ------------------
